...
        }),
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          tabBarButtonTestID: "home-tab-buttonid",
          title: "Home",
          headerTitle: "Grouptivate",
          tabBarIcon: ({ color }) => (
            <UniversalIcon
              source={IconSource.FontAwesome6}
              name={"house"}
...
          ),
        }}
      />
      <Tabs.Screen
        name="profile"
        options={{
          tabBarButtonTestID: "profile-tab-buttonid",
          title: "Profile",
          headerTitle: "Grouptivate",
          tabBarIcon: ({ color }) => (
            <UniversalIcon
              source={IconSource.FontAwesome6}
              name={"user-large"}
...
