...
            autoCorrect={false}
            value={String(amountValue)}
            onChangeText={(text) => setAmountValue(Number(text))}
          ></TextInput>
          <View style={{ width: "50%" }}>
            <TouchableOpacity
              testID="development-exercise-button"
              style={{ marginTop: 10, marginBottom: 5 }}
              onPress={async () => {
                const healthAdapter = await healthAdapterPromise;
                const options = {
                  startDate: new Date(Date.now() - 1000),
                  endDate: new Date(),
...
