...

  if (!group) {
    return (
      <>
        <Stack.Screen
          options={{
            title: "Settings",
            headerLeft: () => <Back />,
          }}
        />
        <View
          style={[
            globalStyles.viewContainer,
...
            placeholder="Enter username"
            value={newMemberName}
            onChangeText={(text) => setNewMemberName(text)}
          />
        </CustomModal>

        <Collapsible title="Members" style={{ marginTop: 6 }}>
          {members.map((member, index) => (
            <SettingsMember
              key={member[0]}
              user={{ userId: member[0], name: member[1] }}
              onRemove={() => promptRemoveMember(index)}
            />
          ))}
          <View
            style={[styles.row, { justifyContent: "center", marginBottom: 8 }]}
          >
            <TouchableOpacity
              style={styles.row}
              testID="inviteMemberButtonTestId"
              onPress={() => setInviteModalVisibility(true)}
            >
              <UniversalIcon
                source={IconSource.FontAwesome6}
                name="circle-plus"
                size={24}
...
            />
          ))}
          <View
            style={[styles.row, { justifyContent: "center", marginBottom: 8 }]}
          >
            <TouchableOpacity
              testID="create-group-goal"
              style={styles.row}
              onPress={openGroupGoalModal}
            >
              <UniversalIcon
                source={IconSource.FontAwesome6}
                name="circle-plus"
...
                  numberOfLines={1}
                  style={[globalStyles.smallTitle, { flex: 1, marginLeft: 10 }]}
                >
                  {memberName}
                </Text>
                <TouchableOpacity
                  testID="add-individual-goal"
                  onPress={() => openIndividualGoalModal(memberIndex)}
                >
                  <UniversalIcon
                    source={IconSource.FontAwesome6}
                    name="plus"
                    size={24}
...
