import { Modal } 

export enum modalMode {
    Delete = "delete",
    Cancel = "cancel",
}
