...
            ></GoalContainer>
          ))}
        </Collapsible>
        <View style={[styles.row]}>
          <Text style={globalStyles.sectionHeader}>Groups</Text>
          <TouchableOpacity
            testID="add-group-button"
            onPress={() => setNewGroupModalVisibility(true)}
          >
            <UniversalIcon
              source={IconSource.FontAwesome6}
              name="plus"
              size={23}
...
              style={{ marginRight: 5 }}
            />
          </TouchableOpacity>
        </View>
        {groups.map((group) => (
          <TouchableOpacity
            testID="open-group"
            key={group.groupId}
            onPress={() =>
              router.push({
                pathname: "/group",
                params: { id: group.groupId },
              })
...
