import { Modal, View, Text, TouchableOpacity, StyleSheet } from "react-native";
import { PropsWithChildren } from "react";
import { GoalType } from "@/lib/API/schemas/Goal";
import globalStyles from "@/constants/styles";

export enum modalMode {
  Create = "create",
  Delete = "delete",
}

export function CustomModal({
  children,
  title,
...
