...
      <View style={styles.buttons}>
        <TouchableOpacity
          style={[styles.button, { backgroundColor: "#4062BB" }]}
          onPress={() => router.push("/signin")}
        >
          <Text style={[globalStyles.smallTitle, { color: "white" }]}>
            Sign in
          </Text>
        </TouchableOpacity>
        <TouchableOpacity
          style={[styles.button, { backgroundColor: "#D9D9D9" }]}
          onPress={() => router.push("/signup")}
        >
          <Text style={globalStyles.smallTitle}>Sign up</Text>
        </TouchableOpacity>
      </View>
    </>
  );
}

...
