...
                marginTop: 10,
                paddingLeft: 10,
                paddingRight: 10,
              },
            ]}
          >
            Log out
          </Text>
        </TouchableOpacity>
        <Text style={[globalStyles.textStyle, { fontSize: 32, marginTop: 50 }]}>
          Invitations
        </Text>
        {invites.map((invite, index) => (
          <Invite
            key={invite.inviteId}
            {...invite}
            handleInvite={(answer: InviteAnswer) => {
...
