import { RecordType } from "react-native-health-connect";

export const RecordEnum: { [K in RecordType]: K } = {
  ActiveCaloriesBurned: "ActiveCaloriesBurned",
  BasalBodyTemperature: "BasalBodyTemperature",
  BasalMetabolicRate: "BasalMetabolicRate",
  BloodGlucose: "BloodGlucose",
  BloodPressure: "BloodPressure",
  BodyFat: "BodyFat",
  BodyTemperature: "BodyTemperature",
  BodyWaterMass: "BodyWaterMass",
  BoneMass: "BoneMass",
  CervicalMucus: "CervicalMucus",
  CyclingPedalingCadence: "CyclingPedalingCadence",
  ElevationGained: "ElevationGained",
  ExerciseSession: "ExerciseSession",
  FloorsClimbed: "FloorsClimbed",
  HeartRate: "HeartRate",
  RestingHeartRate: "RestingHeartRate",
  Steps: "Steps",
  StepsCadence: "StepsCadence",
  Distance: "Distance",
  Height: "Height",
  Hydration: "Hydration",
  HeartRateVariabilityRmssd: "HeartRateVariabilityRmssd",
  SexualActivity: "SexualActivity",
  Weight: "Weight",
  Nutrition: "Nutrition",
  LeanBodyMass: "LeanBodyMass",
  IntermenstrualBleeding: "IntermenstrualBleeding",
  Speed: "Speed",
  MenstruationFlow: "MenstruationFlow",
  MenstruationPeriod: "MenstruationPeriod",
  SleepSession: "SleepSession",
  RespiratoryRate: "RespiratoryRate",
  WheelchairPushes: "WheelchairPushes",
  Vo2Max: "Vo2Max",
  OvulationTest: "OvulationTest",
  TotalCaloriesBurned: "TotalCaloriesBurned",
  OxygenSaturation: "OxygenSaturation",
  Power: "Power",
};
